Fixes icon alignment issue

--- a/assets/scss/modules/_notifications.scss
+++ b/assets/scss/modules/_notifications.scss
@@ -163,8 +163,7 @@
 }
 
 .highlight-message--icon-top {
-  background-position: em(20) em(20);
-  background-size: em(27) em(27);
+  background-position: 20px 20px;
 }
 
 .highlight-message--dark {
